# openai-api-python-andrei

./: .gitignore  README.md  pyproject.toml
02-dive-into-openai-api/: 01-openai-authentication.ipynb  01-text-completion.ipynb  09-chatgpt.ipynb  14-completion-parameters.ipynb  15-prompts.md  15-system-role.ipynb  16-prompt-engineering.ipynb  16-prompts.md  17-dall-e.ipynb  18-2-dall-e-edit.ipynb  18-dall-e-variation.ipynb  19-german-translated.txt  19-rr-original.txt  19-rr-whisper.txt  19-whisper.ipynb
03-prj-01-sentiment-analysis/: sentiment-analysis.ipynb  test.ipynb
04-prj-02-chatGPT-clone/: chatGPT-clone-understanding.ipynb  chatGPT-clone.ipynb  prompt-examples.md
05-prj-03-healthy-daily-meal-plan/: healthy-daily-meal-plan.ipynb
08-text-embeddings/: 41-simple-enbeddings.ipynb  42-find-similarities.ipynb  43-semantic-search.ipynb
11-python-appendix/: 61-json-serialization.py  62-json-deserialization.py  64-requests.py  friends.json
common/: usage.py
prj-02-chatGPT-clone/: chatGPT-clone.ipynb
prj-03-healthy-daily-meal-plan/: healthy-daily-meal-plan.ipynb  test.ipynb
prj-04-youtube-videos-summary-generator/: test.ipynb  test_import.ipynb  transcript-TOEFL-Listening-Practice---Lecture-1.txt  transcript-Une-vie-Marie-Curie.txt  youtube-videos-summary-generator-import.ipynb  youtube-videos-summary-generator.ipynb  youtube_audio_downloader.py
prj-06-book-recommendation/: 49-visualize-embedding-atlas.ipynb  book-recommendation.ipynb
prj-06-shell-gpt/: 43_remote_ssh_2.py  43_rename_files.sh  backup_dir.sh
prj-07-shell-gpt/: 53_remote_ssh.py
(+7 files in other folders)
