[tool.poetry]
name = "openai-api-python-bootcamp-andrei"
version = "0.1.0"
description = ""
authors = ["Noah Kim <dongwoo_333@hanmail.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ipython = "^8.12.0"
jupyter = "^1.0.0"
openai = "^0.27.4"
pillow = "^9.5.0"
pytube = "^12.1.3"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
scipy = "^1.10.1"
plotly = "^5.14.1"
pandas = "^2.0.1"
tiktoken = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
